deploy/k3s/ingress/ingress-wrangler.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coin-ops-api
  namespace: coin-ops-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "wrangler.pp.ua"
      secretName: "wrangler-pp-ua-tls"
  rules:
    - host: "wrangler.pp.ua"
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: proxy
                port:
                  number: 8080
          - path: /history-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: history-api
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coin-ops-ui
  namespace: coin-ops-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "wrangler.pp.ua"
      secretName: "wrangler-pp-ua-tls"
  rules:
    - host: "wrangler.pp.ua"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
